# pipe-strip

./: README.md  __init__.py  analysis.md  common_man.py  cspell.json  pipe_strip.py  requirements.txt  setup.cfg
resources/: pipe_strip.gpl  pipe_strip_mini_alt_alt_alt_alt_text.ans  pipe_strip_mini_alt_alt_alt_text.ans
src/pipe_strip/: __init__.py  auto_restart.py  pipe_strip.py
src/pipe_strip/resources/: pipe_strip_mini_alt_alt_alt_alt_alt_text.ans  pipe_strip_mini_alt_alt_text.ans  pipe_strip_mini_alt_text.ans
