[metadata]
name = pipe_strip
version = 0.1.0
description = A terminal-based comic reader for the Garfield comic strip
long_description = file: README.md
long_description_content_type = text/markdown
author = Isaiah Odhner
author_email = isaiahodhner@gmail.com
license = CC0-1.0
license_file = LICENSE-CC0.txt
license_files = LICENSE-CC0.txt
url = https://github.com/1j01/pipe-strip
keywords = tui, terminal, drawing, art, graphics, text, textual, rich, ansi, ansi-art, smoking, cat, jon, arbuckle, jim, davis, pipe, comic, comic-reader, garfield, immortality, pipe-strip, 7-27
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Terminals
    Natural Language :: English

[options]
install_requires =
    textual==0.27.0
    rich==13.3.5
[options.extras_require]
dev =
    watchdog==3.0.0
    psutil==5.9.0
    types-psutil==5.9.5.15
[options.entry_points]
console_scripts =
    pipe-strip = pipe_strip.pipe_strip:main
[options.package_data]
pipe_strip =
    **/*.css
    **/*.ans
